RESOLVED FIXED204616
[LFC] Don't leak Boxes
https://bugs.webkit.org/show_bug.cgi?id=204616
Summary [LFC] Don't leak Boxes
Antti Koivisto
Reported 2019-11-26 06:27:23 PST
TreeBuilder is full of .release()
Attachments
patch (4.45 KB, patch)
2019-11-26 06:30 PST, Antti Koivisto
zalan: review+
patch (4.45 KB, patch)
2019-11-26 08:00 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-11-26 06:30:44 PST
alan
Comment 2 2019-11-26 07:21:12 PST
Comment on attachment 384350 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=384350&action=review > Source/WebCore/layout/layouttree/LayoutTreeBuilder.cpp:284 > + m_layoutTreeContent.addBox(WTFMove(tableBox)); Remove // Temporary ?
Antti Koivisto
Comment 3 2019-11-26 08:00:42 PST
WebKit Commit Bot
Comment 4 2019-11-26 08:44:23 PST
Comment on attachment 384355 [details] patch Clearing flags on attachment: 384355 Committed r252888: <https://trac.webkit.org/changeset/252888>
WebKit Commit Bot
Comment 5 2019-11-26 08:44:25 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-11-26 08:45:16 PST
Note You need to log in before you can comment on or make changes to this bug.