[LFC] Don't leak Boxes https://bugs.webkit.org/show_bug.cgi?id=204616

Reviewed by Zalan Bujtas.

Store Boxes to LayoutTreeContent instead of leaking them.

This is probably not the final memory management model.

* layout/layouttree/LayoutTreeBuilder.cpp:
(WebCore::Layout::TreeBuilder::buildTableStructure):
(WebCore::Layout::TreeBuilder::buildSubTree):
* layout/layouttree/LayoutTreeBuilder.h:
(WebCore::Layout::LayoutTreeContent::addBox):


Canonical link: https://commits.webkit.org/217862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252888 268f45cc-cd09-0410-ab3c-d52691b4dbfc